--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ aiosignal==1.2.0
 aiosmb==0.2.50
 aiosqlite==0.17.0
 aiowinreg==0.0.7
-alembic==1.7.6.dev0
+alembic==1.8.1
 altgraph==0.17.2
 aniso8601==9.0.1
 anyio==3.6.1
