--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DATABASE_HOSTNAME=localhost
-DATABASE_PORT=3000
+DATABASE_PORT=5432
 DATABASE_PASSWORD=danish
 DATABASE_NAME=fastApi
-DATABASE_USERNAME=root
+DATABASE_USERNAME=postgres
 SECRET_KEY=5b119a961fcb523c81c25e8f79de2380
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MIN=120
